     filter() calls to create join criterion, and new tables introduced
     within filter() already add themselves to the FROM clause.  The
     new behavior allows not just joins from the main table, but select 
     statements as well.  Filter criterion, order bys, eager load
     clauses will be "aliased" against the given statement.
     
   - added "cascade delete" behavior to "dynamic" relations just like
     that of regular relations.  if passive_deletes flag (also just added)
     is not set, a delete of the parent item will trigger a full load of 
     the child items so that they can be deleted or updated accordingly.

   - also with dynamic, implemented correct count() behavior as well
     as other helper methods.
     
   - fix to cascades on polymorphic relations, such that cascades
     from an object to a polymorphic collection continue cascading 
     along the set of attributes specific to each element in the collection.
     
   - query.get() and query.load() do not take existing filter or other
     criterion into account; these methods *always* look up the given id
     in the database or return the current instance from the identity map, 
     disregarding any existing filter, join, group_by or other criterion
     which has been configured. [ticket:893]
          
   - new synonym() behavior: an attribute will be placed on the mapped
     class, if one does not exist already, in all cases. if a property
     already exists on the class, the synonym will decorate the property
     with the appropriate comparison operators so that it can be used in in
     column expressions just like any other mapped attribute (i.e. usable in
     filter(), etc.) the "proxy=True" flag is deprecated and no longer means
     anything. Additionally, the flag "map_column=True" will automatically
     generate a ColumnProperty corresponding to the name of the synonym,
     i.e.: 'somename':synonym('_somename', map_column=True) will map the